@@ -1,0 +1,6 @@
+
+-- old non-method sound function
+
+function core.sound_stop(handle, ...)
+	return handle:stop(...)
+end
