@@ -21,6 +21,9 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 #pragma once
 
 #include "lua_api/l_base.h"
+#include "util/basic_macros.h"
+
+using sound_handle_t = int;
 
 class ModApiMainMenuSound : public ModApiBase
 {
@@ -28,15 +31,32 @@ private:
 	// sound_play(spec, loop)
 	static int l_sound_play(lua_State *L);
 
-	// sound_stop(handle)
-	static int l_sound_stop(lua_State *L);
-
 public:
 	static void Initialize(lua_State *L, int top);
 };
 
-//~ class MainMenuSoundRef final : public ModApiBase
-//~ {
-//~ public:
-	//~ ~MainMenuSoundRef() override = default;
-//~ };
+class MainMenuSoundRef final : public ModApiBase
+{
+private:
+	sound_handle_t m_handle;
+
+	static const char className[];
+	static const luaL_Reg methods[];
+
+	MainMenuSoundRef(sound_handle_t handle) : m_handle(handle) {}
+
+	DISABLE_CLASS_COPY(MainMenuSoundRef)
+
+	static MainMenuSoundRef *checkobject(lua_State *L, int narg);
+
+	static int gc_object(lua_State *L);
+
+	// :stop()
+	static int l_stop(lua_State *L);
+
+public:
+	~MainMenuSoundRef() = default;
+
+	static void create(lua_State *L, sound_handle_t handle);
+	static void Register(lua_State *L);
+};
